# c-jam

./: CMakeLists.txt  main.c
assets/maps/: map-01.json  map-01.tmx
assets/maps/tilesets/: cave.tsx
cmake/: FindSDL.cmake  FindSDL2.cmake  FindSDL2_image.cmake
game/: game.c  game.h  player.c  player.h  scene.c  scene.h
include/: game.h  player.h  scene.h
render/: image.c  image.h
src/: game.c  image.c  main.c  player.c  scene.c
